--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "dev-worker": "node --watch worker.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.26.0",
   "dependencies": {
+    "bullmq": "^5.66.1",
     "cors": "^2.8.5",
-    "express": "~4.22.1"
+    "express": "~4.22.1",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "@types/express": "~4.17.25",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.0.3"
   }
 }
