--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "packageManager": "pnpm@10.26.0",
   "dependencies": {
+    "@langchain/community": "^1.1.1",
+    "@langchain/core": "^1.1.7",
     "bullmq": "^5.66.1",
     "cors": "^2.8.5",
     "express": "~4.22.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "pdf-parse": "1.1.1"
   },
   "devDependencies": {
     "@types/express": "~4.17.25",
