--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,7 @@ services:
     image: valkey/valkey
     ports:
       - "6379:6379"
+  ollama:
+    image: ollama/ollama
+    ports:
+      - "11434:11434"
