--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,7 @@ services:
     image: ollama/ollama
     ports:
       - "11434:11434"
+  qdrant:
+    image: qdrant/qdrant
+    ports:
+      - "6333:6333"
