--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@langchain/community": "^1.1.1",
     "@langchain/core": "^1.1.7",
+    "@langchain/ollama": "^1.1.0",
     "@langchain/openai": "^1.2.0",
     "@langchain/qdrant": "^1.0.1",
     "bullmq": "^5.66.1",
