--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,12 @@ services:
     image: ollama/ollama
     ports:
       - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
   qdrant:
     image: qdrant/qdrant
     ports:
       - "6333:6333"
+
+volumes:
+  ollama_data:
