--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "~4.22.1",
     "multer": "^2.0.2",
+    "ollama": "^0.6.3",
     "pdf-parse": "1.1.1"
   },
   "devDependencies": {
